# CMakeList.txt : CMake project for Transforming_Objects, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (TransformingObjects "Transforming_Objects.cpp" "Transforming_Objects.h")

# TODO: Add tests and install targets if needed.
